Refactor Dockerfile to use multi-stage build